# sun4m-user-emulator

./: AGENTS.md  CLAUDE.md  README.md  TODO.md  debug.py  decoder.py  instruction.py
.github/workflows/: test.yml
cpp/: CMakeLists.txt
cpp/include/sun4m/: constants.hpp  cpu.hpp  decoder.hpp  elf.hpp  endian.hpp  instruction.hpp  machine.hpp  memory.hpp  register.hpp  syscall.hpp
cpp/src/: cpu.cpp  decoder.cpp  elf.cpp  instruction.cpp  machine.cpp  main.cpp  memory.cpp  register.cpp  syscall.cpp
cpp/tests/: CMakeLists.txt  test_cpu.cpp  test_decoder.cpp  test_elf.cpp  test_fp_instruction.cpp  test_instruction.cpp  test_machine.cpp  test_memory.cpp  test_register.cpp  test_syscall.cpp
sun4m/: __main__.py  constants.py  cpu.py  decoder.py  elf.py  instruction.py  machine.py  memory.py  register.py  syscall.py
tests/: test_cpu.py  test_decoder.py  test_elf.py  test_fp_instruction.py  test_instruction.py  test_machine.py  test_main.py  test_memory.py  test_register.py  test_syscall.py
